hphp/hack/test/typecheck/abstract_final_nonstatic_constructor.php
<?hh // partial
abstract final class A {
  public function __construct() {}
}
